# hcc-llm-architecture-benchmark

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run_best_models.sh
InstanceRunResults/: analyze.py
InstanceRunResults/results_apr3/run=20260403_022620_A2_gpt52/: config_snapshot.yaml
configs/: best_models.yaml  default.yaml  llm_params.yaml
configs/agents/: graph.yaml  prompts.yaml
configs/eval/: datasets.yaml  metrics.yaml  runs.yaml
configs/experiments/: a1_oneshot_all.yaml  a2_consensus_large.yaml  a3_consensus_large.yaml  a3_consensus_small.yaml  a3_qwen_reasoning_high.yaml  a3_qwen_reasoning_low.yaml  a4_consensus_small.yaml  qwen_reasoning_high.yaml  qwen_reasoning_low.yaml  small_agentic.yaml  small_consensus.yaml  small_consensus_rag.yaml  small_oneshot.yaml  small_oneshot_rag.yaml  smoke_consensus.yaml  smoke_consensus_rag.yaml
configs/providers/: openrouter.yaml
configs/rag/: chroma.yaml  chunking.yaml  corpus.yaml  embeddings.yaml  retrieval.yaml
data/eval/: sct_validated_ground_truth.csv
docs/: CONTRIBUTING.md  a1_evaluation_reporting.md  architecture.md  architecture_a3_a4.md  datasets.md  decisions.md  evaluation.md
scripts/: generate_reports.py  generate_visualizations.py  smoke_report.py  test_models_consistency.py  validate_consensus.py
src/oncology_agentic_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/oncology_rag/: __init__.py
src/oncology_rag/analysis/: __init__.py  sct_agreement.py
src/stats/: __init__.py  report_tables.py
tests/: test_retrieval_metrics.py
(+84 files in other folders)
